<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/about_us_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White"
    android:clipToPadding="false"
    android:paddingTop="25dp"
    tools:showIn="@layout/activity_main_scrolling">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="10dp">

        <TextView
            android:id="@+id/aboutVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:drawablePadding="8dp"
            android:drawableTop="@mipmap/ic_launcher"
            android:gravity="center"
            android:text="@string/app_name"
            android:textAllCaps="false"
            android:textColor="@color/comment_text"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/aboutContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textColor="#000000"
            android:textSize="20sp"
            tools:text="@string/about_content" />

        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14dp"
            android:text="@string/WZcontent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="14dp"
            android:text="@string/WZcontent2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/WZcontent3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="14dp"
            android:text="@string/WZcontent4" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/WZcontent5" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="14dp"
            android:text="@string/WZcontent6" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="源码位置"
            android:layout_margin="14dp"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/WZcontent7"
            />

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>