<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#22000000">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/qq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@mipmap/qq"
            android:text="@string/qqlogin" />

        <TextView
            android:id="@+id/xinlang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_toRightOf="@id/qq"
            android:drawableTop="@mipmap/weobo"
            android:text="@string/xinlanglogin" />
        <TextView
            android:id="@+id/wx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_toRightOf="@id/xinlang"
            android:drawableTop="@mipmap/weixin"
            android:text="@string/wxlogin" />
    </RelativeLayout>
</RelativeLayout>