<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF"
    tools:context="com.example.dell.big_wanandroid.MainUi.SerachActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/backs"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:src="@mipmap/bka"/>

        <EditText
            android:id="@+id/serch"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:drawableLeft="@mipmap/sousuo"
            android:hint="@string/findgank"
            android:background="@drawable/kuang" />

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="30dp"
            android:background="@drawable/shapes"
            android:text="@string/serch" />
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hotserch"
        android:layout_margin="10dp"
        android:textColor="@color/orange"
        android:textSize="22sp"/>
    <com.example.dell.big_wanandroid.utils.FlowLayout
        android:id="@+id/flow"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
 
    <RelativeLayout
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/lishi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/bule"
            android:text="@string/serchhistroy"/>
        <TextView
            android:id="@+id/clear"
            android:drawableRight="@mipmap/ic_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:textSize="20sp"
            android:clickable="false"
            android:layout_gravity="right"
            android:text="@string/clear"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <android.support.v7.widget.RecyclerView
        android:id="@+id/rlv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/flbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/xuanfu"
        app:backgroundTint="@color/blue"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="68dp"
        android:layout_marginRight="40dp"
        app:layout_anchorGravity="end|bottom" />
    </RelativeLayout>
</LinearLayout>
