<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.dell.big_wanandroid.HomeActivity">

    <LinearLayout
        android:id="@+id/rll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="9">


                <android.support.design.widget.AppBarLayout
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize">

                    <android.support.v7.widget.Toolbar
                        android:id="@+id/toolbar"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@color/toolbars"
                        app:layout_scrollFlags="scroll|enterAlways"
                        app:titleTextColor="#ffffff">

                        <TextView
                            android:id="@+id/tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:textColor="@color/white"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/yyy"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:layout_toRightOf="@id/toolbar" />

                    </android.support.v7.widget.Toolbar>

                </android.support.design.widget.AppBarLayout>

                <FrameLayout
                    android:id="@+id/fl"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

        </android.support.design.widget.CoordinatorLayout>

        <RadioGroup
            android:id="@+id/rg"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/btn1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:checked="true"
                android:drawableTop="@drawable/homes"
                android:gravity="center"
                android:text="@string/home"
                android:textColor="@color/colerds" />

            <RadioButton
                android:id="@+id/btn2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:drawableTop="@drawable/studys"
                android:gravity="center"
                android:text="@string/study"
                android:textColor="@color/colerds" />

            <RadioButton
                android:id="@+id/btn3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:drawableTop="@drawable/crosss"
                android:gravity="center"
                android:text="@string/cross"
                android:textColor="@color/colerds" />

            <RadioButton
                android:id="@+id/btn4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:drawableTop="@drawable/moves"
                android:gravity="center"
                android:text="@string/move"
                android:textColor="@color/colerds" />

            <RadioButton
                android:id="@+id/btn5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:drawableTop="@drawable/projects"
                android:gravity="center"
                android:text="@string/project"
                android:textColor="@color/colerds" />
        </RadioGroup>

    </LinearLayout>


    <android.support.design.widget.NavigationView
        android:id="@+id/nv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="left"
        app:headerLayout="@layout/header"
        app:itemTextColor="@color/colersss"
        app:menu="@menu/menu_nv" />
</android.support.v4.widget.DrawerLayout>
